# vorte-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  next.config.ts  package.json  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: README.md
docs/guides/: agents-module.md  ai-module.md  api-endpoints.md  application.md  auth-module.md  cache-module.md  cli.md  configuration.md  dashboard-module.md  database-module.md  deployment.md  di.md  executor.md  features-module.md  graphql-module.md  i18n-module.md  installation.md  logging-module.md  mailer-module.md  metrics.md  middleware.md  modules.md  mpesa-module.md  notifications-module.md  payments-module.md  queue-module.md  quick-start.md  responses.md  routing.md  rust-engine.md  sandbox.md  scaffolding.md  search-module.md  security-module.md  serialization.md  sockets-module.md  storage-module.md  tenancy-module.md  testing.md  tracing.md  (+2 more)
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/: route.ts
src/components/dashboard/: ai.tsx  config.tsx  docs.tsx  health.tsx  logs.tsx  metrics.tsx  modules.tsx  overview.tsx  routes.tsx  sidebar.tsx
tests/: __init__.py  test_app.py  test_auto_query_planner.py  test_di.py  test_di_wire.py  test_executor.py  test_manifest.py  test_metrics.py  test_query_planner.py  test_response.py  test_router.py  test_sandbox.py  test_serializer.py  test_testing.py  test_typemirror.py
vorte/: __init__.py  engine.py
vorte-engine/: Cargo.toml  README.md
vorte-engine/crates/vorte-core/: Cargo.toml
vorte-engine/crates/vorte-core/src/: connection.rs  lib.rs  pipeline.rs  server.rs  tls.rs
vorte-engine/crates/vorte-http/: Cargo.toml
vorte-engine/crates/vorte-http/src/: headers.rs  lib.rs  method.rs  parse.rs  raw.rs  request.rs  response.rs
vorte-engine/crates/vorte-py/: Cargo.toml
vorte-engine/crates/vorte-py/src/: bridge.rs  engine.rs  handler.rs  lib.rs  metrics.rs
vorte-engine/crates/vorte-router/: Cargo.toml
vorte-engine/crates/vorte-router/src/: lib.rs  node.rs  params.rs  tree.rs
vorte/cli/: __init__.py  main.py  manifest.py
vorte/core/: __init__.py  app.py  config.py  di.py  executor.py  module.py  response.py  router.py  sandbox.py  serializer.py  typemirror.py
vorte/middleware/: __init__.py  error_handler.py  request_timing.py
vorte/modules/: __init__.py
vorte/modules/agents/: __init__.py  agent.py  guardrails.py  memory.py  module.py  orchestrator.py  pipeline.py  prompts.py  rag.py  tools.py
vorte/modules/ai/: __init__.py  client.py  cost_tracker.py  embeddings.py  module.py  schemas.py  streaming.py
vorte/modules/auth/: __init__.py  api_keys.py  guards.py  jwt.py  mfa.py  models.py  module.py  oauth.py  rbac.py  schemas.py  sessions.py
vorte/modules/cache/: __init__.py  cache.py  decorators.py  l1_memory.py  l2_redis.py  l3_cdn.py  l4_db.py  module.py
vorte/testing/: __init__.py
(+83 files in other folders)
